# bi18n

./: Cargo.toml  README.md
examples/: basic.rs  i18n-en  save_load.rs  store.rs
src/: i18n.rs  key.rs  lib.rs  locale.rs
